--- a/src/scripts/home/views/home.html
+++ b/src/scripts/home/views/home.html
@@ -1,20 +1,19 @@
 <section layout="row" layout-fill>
-  <md-sidenav></md-sidenav>
   <section layout="column" layout-fill>
-    <md-toolbar>
+    <md-toolbar ng-controller="main.home.nav as navCtrl" md-scroll-shrink>
       <div class="md-toolbar-tools" layout="row" layout-align="space-between center">
         <div layout="row">
           <md-button aria-label="menu button">
-            <img src="images/kushi-crest.png" alt="kushi crest" height="60px" width="60px">
+            <img src="images/kushi-crest.png" alt="kushi crest" height="50px" width="50px">
           </md-button>
           <h3>Michio Kushi</h3>
         </div>
         <section id="nav" layout="row" layout-align="end center">
-          <div id="search" layout="row" layout-align="end end" ng-class="{expanded: homeCtrl.searchFocus}">
-            <md-button aria-label="search" ng-click="homeCtrl.toggleSearch()">
+          <div id="search" layout="row" layout-align="end end" ng-class="{expanded: navCtrl.searchFocus}">
+            <md-button aria-label="search" ng-click="navCtrl.toggleSearch()">
               <i class="mdi mdi-magnify mdi-2x"></i>
             </md-button>
-            <md-input-container ng-if="homeCtrl.searchFocus" layout="row">
+            <md-input-container ng-if="navCtrl.searchFocus" layout="row">
 
               <input type="text" ng-model="search" flex>
 
@@ -24,18 +23,131 @@
               </md-button>
             </div>
           </div>
-          <div id="filters" layout="row" layout-align="end end" ng-class="{expanded: homeCtrl.searchFocus}">
-            <md-button aria-label="search" ng-click="homeCtrl.toggleFilters()"><i class="mdi mdi-filter-variant mdi-2x"></i>
+          <div id="filters" layout="row" layout-align="end end" ng-class="{expanded: navCtrl.searchFocus}">
+            <md-button aria-label="search" ng-click="navCtrl.toggleRight()"><i class="mdi mdi-filter-variant mdi-2x"></i>
             </md-button>
           </div>
-          <div id="options" layout="row" layout-align="end end" ng-class="{expanded: homeCtrl.searchFocus}">
-            <md-button aria-label="search" ng-click="homeCtrl.toggleOptions()"><i class="mdi mdi-dots-vertical mdi-2x"></i>
+          <div id="options" layout="row" layout-align="end end" ng-class="{expanded: navCtrl.searchFocus}">
+            <md-button aria-label="search" ng-click="navCtrl.toggleOptions()"><i class="mdi mdi-dots-vertical mdi-2x"></i>
             </md-button>
           </div>
         </section>
       </div>
     </md-toolbar>
+    <md-content>
+
+    </md-content>
 
   </section>
+  <md-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="right">
+    <md-toolbar>
+      <div class="md-toolbar-tools" layout="row" layout-align="space-between center">
+        <md-button aria-label="close filter menu" ng-click="homeCtrl.toggleFilters()"><i class="mdi mdi-arrow-right mdi-2x"></i>
+        </md-button>
+        <h3>Filter by</h3>
+        <span flex></span>
+        <md-button aria-label="reset filters" ng-click="filters = null"><i class="mdi mdi-refresh mdi-2x"></i>
+        </md-button>
+      </div>
+    </md-toolbar>
+    <md-content class="md-padding" layout="column" layout-align="start start" layout-fill>
+
+      <md-list layout-fill>
+        <md-item id="search" layout="row" layout-align="space-between end" layout-fill>
+          <i class="mdi mdi-magnify mdi-lg"></i>
+
+          <md-input-container layout="row" flex>
+
+            <input type="text" ng-model="search" flex>
+
+          </md-input-container>
+          <md-button aria-label="clear search" ng-click="search = null"><i class="mdi mdi-close mdi-lg"></i>
+          </md-button>
+        </md-item>
+        <md-item>
+          <md-item-content layout-fill layout="row" layout-align="space-between center">
+            <i class="mdi mdi-file-image-box mdi-lg"></i>
+            <h4>Images</h4>
+            <span flex></span>
+            <md-checkbox ng-model="filters.image"></md-checkbox>
+          </md-item-content>
+        </md-item>
+        <md-item>
+          <md-item-content layout="row" layout-align="space-between center">
+            <i class="mdi mdi-youtube-play mdi-lg"></i>
+            <h4>Video</h4>
+            <span flex></span>
+            <md-checkbox ng-model="filters.video"></md-checkbox>
+          </md-item-content>
+        </md-item>
+        <md-item>
+          <md-item-content layout="row" layout-align="space-between center">
+            <i class="mdi mdi-library-books mdi-lg"></i>
+            <h4>Stories</h4>
+            <span flex></span>
+            <md-checkbox ng-model="filters.story"></md-checkbox>
+          </md-item-content>
+        </md-item>
+        <md-item>
+          <md-item-content layout="row" layout-align="space-between center">
+            <i class="mdi mdi-newspaper mdi-lg"></i>
+            <h4>Articles</h4>
+            <span flex></span>
+            <md-checkbox ng-model="filters.article"></md-checkbox>
+          </md-item-content>
+        </md-item>
+        <md-item>
+          <md-item-content layout="row" layout-align="space-between center">
+            <i class="mdi mdi-comment-text-outline mdi-lg"></i>
+            <h4>Quotes</h4>
+            <span flex></span>
+            <md-checkbox ng-model="filters.quote"></md-checkbox>
+          </md-item-content>
+        </md-item>
+      </md-list>
+      <md-subheader layout="row">
+        <i class="mdi mdi-account-multiple"></i>
+        <span>People</span>
+      </md-subheader>
+      <md-list layout-fill layout="row" layout-align="space-around center">
+        <md-item>
+          <md-item-content layout="row">
+            <md-button aria-label="michio" class="md-primary" ng-class="{'md-raised':filters.michio}" ng-click="">michio</md-button>
+
+          </md-item-content>
+        </md-item>
+        <md-item>
+          <md-item-content layout="row">
+            <md-button aria-label="aveline" class="md-primary" ng-class="{'md-raised':filters.aveline}" ng-click="">aveline</md-button>
+          </md-item-content>
+        </md-item>
+      </md-list>
+
+      <md-subheader>
+        <i class="mdi mdi-map-marker"></i>
+        <span>Places</span>
+      </md-subheader>
+      <md-list layout-fill>
+        <md-item>
+          <md-item-content layout="row" layout-align="space-between center">
+            <h3>Erewhon</h3>
+            <md-checkbox></md-checkbox>
+          </md-item-content>
+        </md-item>
+        <md-item>
+          <md-item-content layout="row" layout-align="space-between center">
+            <h3>Brookline</h3>
+            <md-checkbox></md-checkbox>
+          </md-item-content>
+        </md-item>
+        <md-item>
+          <md-item-content layout="row" layout-align="space-between center">
+            <h3>Becket</h3>
+            <md-checkbox></md-checkbox>
+          </md-item-content>
+        </md-item>
+      </md-list>
+    </md-content>
+  </md-sidenav>
 
 </section>
