--- a/src/scripts/home/views/feed.html
+++ b/src/scripts/home/views/feed.html
@@ -1,5 +1,5 @@
 <section ng-controller="main.home.masonry as msnryCtrl">
-  <div ng-init="feedCtrl.initMsnry()" class="masonry-container js-masonry" data-masonry-options='{"gutter": 0 }'>
+  <div ng-init="feedCtrl.initMsnry()" class="masonry-container js-masonry" data-masonry-options='{"gutter": 0 }' ng-controller="main.home.feed as feedCtrl">
     <!-- items -->
     <div class="item grid-sizer"></div>
     <div class="item w2">
@@ -8,15 +8,26 @@
       </md-card>
 
     </div>
-    <div class="item" ng-repeat="item in homeCtrl.feed">
-      <md-card>
-        <i class="mdi mdi-bell"></i>
-        <img src="images/kushi-crest.png">
+    <div class="item" ng-repeat="entry in feedCtrl.feed">
 
+      <md-card ng-if="entry.title" ng-init="msnryCtrl.reload()">
+        <md-toolbar>
+          <div class="md-toolbar-tools" layout="row" layout-align="space-between center">
+            <h3>{{entry.title}}</h3>
+          </div>
+        </md-toolbar>
+        <i class="mdi mdi-star"></i>
+        <img src="images/kushi-crest.png">
+        <md-toolbar>
+          <div class="md-toolbar-tools" layout="row" layout-align="space-between center">
+
+          </div>
+        </md-toolbar>
       </md-card>
+
     </div>
     <div class="item">
-      <md-card><i class="mdi mdi-bell"></i>
+      <md-card><i class="mdi mdi-google-plus"></i>
         <img src="images/kushi-crest.png">
       </md-card>
     </div>
