--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -91,6 +91,25 @@ button.side-nav {
     color: rgba(0,0,0,0.87);
   }
 }
+//grid card
+#feed {
+  md-card {
+    .video-frame {
+      position: relative;
+      padding-bottom: 56.25%;
+      padding-top: 35px;
+      height: 0;
+      overflow: hidden;
+      iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+}
 //masonry
 .grid-sizer.item {
   height: 0;
