--- a/src/scripts/home/views/feed.html
+++ b/src/scripts/home/views/feed.html
@@ -1,16 +1,16 @@
 <section id="feed" ng-controller="main.home.masonry as msnryCtrl">
-  <div ng-init="feedCtrl.initMsnry()" class="masonry-container js-masonry" data-masonry-options='{"gutter": 0 }' ng-controller="main.home.feed as feedCtrl">
+  <div masonry reload-on-show class="masonry-container js-masonry" masonry-options='{"gutter": 0, transitionDuration: " 0.4s " }' ng-controller="main.home.feed as feedCtrl">
     <!-- items -->
-    <div class="item grid-sizer"></div>
-    <div class="item w2">
+    <div class="masonry-brick item grid-sizer"></div>
+    <div class="masonry-brick item w2">
       <md-card>
         <img src="images/michio-poem.jpg" width="100%">
       </md-card>
 
     </div>
-    <div class="item" ng-class="{w2: entry.video}" ng-repeat="entry in feedCtrl.feed" ng-if="entry.title">
+    <div class="masonry-brick item" ng-class="{w2: entry.video}" ng-repeat="entry in feedCtrl.feed" ng-if="entry.title">
 
-      <md-card ng-init="msnryCtrl.reload()">
+      <md-card>
         <md-toolbar>
           <div class="md-toolbar-tools" layout="row" layout-align="space-between center">
             <h3>{{entry.title}}</h3>
@@ -23,7 +23,7 @@
         </md-toolbar>
         <img src="images/kushi-crest.png" ng-if="!entry.video">
         <div ng-if="entry.video" class="video-frame">
-          <youtube-video video-url="entry.video" player-width="'100%'" player-height="'100%'" ng-init="msnryCtrl.reload()"></youtube-video>
+          <youtube-video video-url="entry.video" player-width="'100%'" player-height="'100%'"></youtube-video>
         </div>
         <md-toolbar>
           <div class="md-toolbar-tools" layout="row" layout-align="space-between center">
