--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -97,7 +97,7 @@ button.side-nav {
     .video-frame {
       position: relative;
       padding-bottom: 56.25%;
-      padding-top: 35px;
+      padding-top: 0;
       height: 0;
       overflow: hidden;
       iframe {
